--- a/vignettes/Case studies/DPMFA_LEON-T_longformat.Rmd
+++ b/vignettes/Case studies/DPMFA_LEON-T_longformat.Rmd
@@ -297,7 +297,6 @@ trapezoidal <- function(u, a, b, c, d) {
 
 ```{r Prepare excel data}
 Material_Parameters <- read_excel(path_parameters_file, sheet = "Polymer_data") |> 
-  
   # change um to nm unit coversion
   mutate(across(c(a, b, c, d), as.numeric)) |>
   mutate(across(c(a, b, c, d), ~ case_when(
@@ -308,6 +307,17 @@ Material_Parameters <- read_excel(path_parameters_file, sheet = "Polymer_data") 
     str_detect(Unit, "um") ~ "nm",
     TRUE ~ Unit
   ))
+
+TRWP_data <- read_excel(path_parameters_file, sheet = "TRWP_data") 
+  
+library(pdqr)
+TRWP_data <- 
+  TRWP_data |> separate(`Size Fraction (µm)`,
+                      into = c("Size_um","max_size_um"), sep = "-")
+funProb <- new_d(data.frame(x = as.numeric(TRWP_data$Size_um), y = TRWP_data$PSD_um),
+                 type="continuous")
+
+plot(funProb)
 
 # materials <- unique(Material_Parameters$Polymer)
 materials <- unique(DPMFA_sink_micro$Polymer) # materials in selected sources
